@@ -137,7 +137,7 @@ final class Main
 
 	static synchronized TcpConnection tcpConnection(final InetSocketAddress local, final InetSocketAddress server) {
 		if (!registeredTcpShutdownHook) {
-			Runtime.getRuntime().addShutdownHook(new Thread(Main::closeTcpConnections));
+			Runtime.getRuntime().addShutdownHook(Thread.ofVirtual().unstarted(Main::closeTcpConnections));
 			registeredTcpShutdownHook = true;
 		}
 
@@ -744,25 +744,17 @@ final class Main
 	}
 
 
-	static final class ShutdownHandler extends Thread
-	{
-		private final Thread t = Thread.currentThread();
+	static final class ShutdownHandler {
+		private final Thread hook;
 
-		ShutdownHandler register()
-		{
-			Runtime.getRuntime().addShutdownHook(this);
-			return this;
+		ShutdownHandler() {
+			final Thread t = Thread.currentThread();
+			hook = Thread.ofVirtual().unstarted(t::interrupt);
+			Runtime.getRuntime().addShutdownHook(hook);
 		}
 
-		void unregister()
-		{
-			Runtime.getRuntime().removeShutdownHook(this);
-		}
-
-		@Override
-		public void run()
-		{
-			t.interrupt();
+		void unregister() {
+			Runtime.getRuntime().removeShutdownHook(hook);
 		}
 	}
 
